# GAS

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  conanfile.txt
sql/: actions.sql  roles.sql  tables.sql  test_fill.sql  trigger_with_notify.sql  users_and_roles.sql
src/: gas_core.cpp  gas_core.hpp  main.cpp
src/core/: cache.hpp  connector.hpp  core.cpp  core.hpp  notification.hpp  query.hpp  query_collection.hpp  settings.hpp  storage.hpp  tables.hpp  tables_and_triggers.sql
src/database/: db_connector.cpp  db_connector.hpp
src/gui/: CMakeLists.txt  gas_gui.cpp  gas_gui.hpp  gui_core.cpp  gui_core.hpp  images.qrc  main.cpp  mainwindow.ui
src/sql/: queries.hpp  query.hpp  table.hpp  tables.hpp
src/utility/: connector.hpp  db_connector.hpp  notification.hpp  query.hpp  settings.hpp  table.hpp
tests/: cache_tests.hpp  connector_tests.hpp  main.cpp  storage_tests.hpp
